@@ -3,6 +3,7 @@ ChangeLog for hostapd
 ????-??-?? - v0.7.0
 	* increased hostapd_cli ping interval to 5 seconds and made this
 	  configurable with a new command line options (-G<seconds>)
+	* driver_nl80211: use Linux socket filter to improve performance
 
 2009-01-06 - v0.6.7
 	* added support for Wi-Fi Protected Setup (WPS)
